[gd_scene load_steps=9 format=3 uid="uid://m8q2jsflxg1i"]

[ext_resource type="Script" path="res://level.gd" id="1_2dqqy"]
[ext_resource type="Texture2D" uid="uid://codlc2uml50p6" path="res://assets/textures/Tiles/Tile1.png" id="2_26j6x"]
[ext_resource type="PackedScene" uid="uid://becfinl84qcwe" path="res://Level2.tscn" id="2_jo4lv"]
[ext_resource type="PackedScene" uid="uid://cdp2ouyl3iaqj" path="res://bubble_character.tscn" id="3_jfmri"]
[ext_resource type="PackedScene" uid="uid://cij06vhna703f" path="res://bubble_collectible.tscn" id="4_0atvm"]
[ext_resource type="PackedScene" uid="uid://moircybc4up5" path="res://object.tscn" id="5_77owk"]
[ext_resource type="FontFile" uid="uid://ds43aokq4oub6" path="res://assets/fonts/baby-gemoy/Baby Gemoy.ttf" id="7_obx4p"]

[sub_resource type="LabelSettings" id="LabelSettings_0aa2e"]
font = ExtResource("7_obx4p")

[node name="Level_1" type="Node2D"]
script = ExtResource("1_2dqqy")
next_level_scene = ExtResource("2_jo4lv")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
position = Vector2(0, -1)
motion_mirroring = Vector2(1500, 1500)

[node name="TextureRect" type="TextureRect" parent="ParallaxBackground/ParallaxLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = 1500.0
offset_bottom = 1500.0
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00163265
texture = ExtResource("2_26j6x")
expand_mode = 2
stretch_mode = 1

[node name="BubbleCharacter" parent="." instance=ExtResource("3_jfmri")]
unique_name_in_owner = true
position = Vector2(559, 358)

[node name="BubbleCollectible2" parent="." instance=ExtResource("4_0atvm")]
position = Vector2(841, -220)

[node name="StaticBody2D" parent="." instance=ExtResource("5_77owk")]
position = Vector2(513, 422)
rotation = 0.5283
scale = Vector2(12.88, 1.88)

[node name="StaticBody2D7" parent="." instance=ExtResource("5_77owk")]
position = Vector2(870, -360)
rotation = 0.0891016
scale = Vector2(12.88, 1.88)

[node name="StaticBody2D8" parent="." instance=ExtResource("5_77owk")]
position = Vector2(1036, -348)
rotation = 0.350921
scale = Vector2(12.88, 1.88)

[node name="StaticBody2D2" parent="." instance=ExtResource("5_77owk")]
position = Vector2(433, 138)
rotation = 1.84837
scale = Vector2(20.3367, 5.15374)

[node name="StaticBody2D3" parent="." instance=ExtResource("5_77owk")]
position = Vector2(596, -215)
rotation = -0.987773
scale = Vector2(20.3367, 5.15374)

[node name="StaticBody2D6" parent="." instance=ExtResource("5_77owk")]
position = Vector2(1046, -132)
rotation = -0.987773
scale = Vector2(20.3367, 5.15374)

[node name="StaticBody2D5" parent="." instance=ExtResource("5_77owk")]
position = Vector2(905, 235)
rotation = 1.7031
scale = Vector2(20.3367, 5.15374)

[node name="StaticBody2D4" parent="." instance=ExtResource("5_77owk")]
position = Vector2(769, 455)
rotation = -0.247857
scale = Vector2(12.88, 1.88)

[node name="Click!" type="Label" parent="."]
offset_left = 543.0
offset_top = 292.0
offset_right = 584.0
offset_bottom = 315.0
text = "Click!"
label_settings = SubResource("LabelSettings_0aa2e")

[node name="Collect!" type="Label" parent="."]
offset_left = 817.0
offset_top = -270.0
offset_right = 874.0
offset_bottom = -247.0
text = "Collect!"

[connection signal="complete_timeout_started" from="." to="Collect!" method="queue_free"]
[connection signal="started" from="BubbleCharacter" to="Click!" method="queue_free"]
